--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "axios": "^1.7.9",
+    "dayjs": "^1.11.13",
     "nprogress": "^0.2.0",
     "pinia": "^2.2.6",
     "qs": "^6.13.1",
@@ -46,6 +47,7 @@
     "unplugin-auto-import": "^0.18.6",
     "unplugin-vue-components": "^0.27.5",
     "vite": "^6.0.1",
+    "vite-plugin-compression": "^0.5.1",
     "vue-tsc": "^2.1.10"
   }
 }
