--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "run-p type-check \"build-only {@}\" --",
+    "build": "run-s type-check lint build:modify build-only build:recovery",
+    "build:modify": "tsx build/modify.ts",
+    "build:recovery": "tsx build/recovery.ts",
     "preview": "vite preview",
     "build-only": "vite build",
     "type-check": "vue-tsc --build",
-    "lint:oxlint": "oxlint . --fix -D correctness --ignore-path .gitignore",
+    "lint:oxlint": "oxlint . --fix -D correctness --ignore-path .oxlintignore",
     "lint:eslint": "eslint . --fix",
     "lint": "run-s lint:*",
     "format": "prettier --write src/"
@@ -42,6 +44,7 @@
     "oxlint": "^0.11.0",
     "prettier": "^3.3.3",
     "sass-embedded": "^1.82.0",
+    "tsx": "^4.19.2",
     "typescript": "~5.6.3",
     "unplugin-auto-import": "^0.18.6",
     "unplugin-vue-components": "^0.27.5",
