--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "axios": "^1.7.9",
     "dayjs": "^1.11.13",
+    "js-sha1": "^0.7.0",
     "nprogress": "^0.2.0",
     "pinia": "^2.2.6",
     "qs": "^6.13.1",
