--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hklist-frontend",
-  "version": "2.0.11",
+  "version": "2.0.12",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -16,6 +16,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@fingerprintjs/fingerprintjs": "^4.5.1",
     "axios": "^1.7.9",
     "dayjs": "^1.11.13",
     "js-sha1": "^0.7.0",
