--- a/package.json
+++ b/package.json
@@ -14,42 +14,47 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "@fingerprintjs/fingerprintjs": "^4.5.1",
-    "axios": "^1.7.9",
+    "@fingerprintjs/fingerprintjs": "^4.6.1",
+    "axios": "^1.8.1",
     "dayjs": "^1.11.13",
     "js-sha1": "^0.7.0",
     "nprogress": "^0.2.0",
-    "pinia": "^2.3.0",
+    "pinia": "^3.0.1",
     "qs": "^6.14.0",
     "tdesign-icons-vue-next": "^0.3.4",
-    "tdesign-vue-next": "^1.10.6",
+    "tdesign-vue-next": "^1.11.1",
     "vue": "^3.5.13",
-    "vue-i18n": "^11.0.1",
+    "vue-i18n": "^11.1.1",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.0",
-    "@types/node": "^22.10.7",
+    "@types/node": "^22.13.8",
     "@types/nprogress": "^0.2.3",
     "@types/qs": "^6.9.18",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vitejs/plugin-vue-jsx": "^4.1.1",
-    "@vue/eslint-config-prettier": "^10.1.0",
-    "@vue/eslint-config-typescript": "^14.3.0",
+    "@vue/eslint-config-prettier": "^10.2.0",
+    "@vue/eslint-config-typescript": "^14.4.0",
     "@vue/tsconfig": "^0.7.0",
-    "eslint": "^9.18.0",
-    "eslint-plugin-oxlint": "^0.15.6",
+    "eslint": "^9.21.0",
+    "eslint-plugin-oxlint": "^0.15.12",
     "eslint-plugin-vue": "^9.32.0",
     "npm-run-all2": "^7.0.2",
-    "oxlint": "^0.15.6",
-    "prettier": "^3.4.2",
-    "sass-embedded": "^1.83.4",
-    "tsx": "^4.19.2",
-    "typescript": "~5.7.3",
-    "unplugin-auto-import": "^19.0.0",
-    "unplugin-vue-components": "^28.0.0",
-    "vite": "^6.0.7",
+    "oxlint": "^0.15.12",
+    "prettier": "^3.5.2",
+    "sass-embedded": "^1.85.1",
+    "tsx": "^4.19.3",
+    "typescript": "~5.8.2",
+    "unplugin-auto-import": "^19.1.1",
+    "unplugin-vue-components": "^28.4.1",
+    "vite": "^6.2.0",
     "vite-plugin-compression": "^0.5.1",
-    "vue-tsc": "^2.2.0"
+    "vue-tsc": "^2.2.6"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "esbuild"
+    ]
   }
 }
